<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">紫米星</string>
    <string name="title_name_main">首页</string>
    <string name="title_name_mine">我的</string>
    <string name="title_name_single">录单</string>
    <string name="title_name_order">我的订单</string>
    <string name="title_name_order_defeult">订单详情</string>
    <string name="title_name_binding_phone">绑定手机</string>
    <string name="title_name_updata_passsword">修改密码</string>
    <string name="title_name_message">我的消息</string>
    <string name="black">返回</string>
    <string name="select">请选择</string>
    <string name="permission_recode_audio_hint">亲，您还没有授权录音权限</string>
    <string name="permission_get_accounts_hint">亲，您还没有授权通讯录权限</string>
    <string name="permission_read_phone_hint">亲，您还没有授权管理通话权限</string>
    <string name="permission_call_phone_hint">亲，您还没有授权拨打电话权限</string>
    <string name="permission_camera_hint">亲，您还没有授权相机权限</string>
    <string name="permission_access_fine_location_hint">亲，您还没有授权定位权限</string>
    <string name="permission_access_coarse_location_hint">亲，您还没有授权定位权限</string>
    <string name="permission_read_external_hint">亲，您还没有授权存储权限</string>
    <string name="permission_white_external_hint">亲，您还没有授权存储权限</string>
    <string name="http_request_success">操作成功</string>
    <string name="exception_cancel_code">-20000</string>
    <string name="exception_cancel_message">操作已取消！</string>
    <string name="exception_net_work_io_code">-20001</string>
    <string name="exception_net_work_io_message">网络不可用，请检查您的网络！</string>
    <string name="exception_net_work_time_out_code">-20002</string>
    <string name="exception_net_work_time_out_message">等待响应超时！</string>
    <string name="exception_net_work_json_code">-20003</string>
    <string name="exception_net_work_json_message">网络数据解析错误！</string>
    <string name="exception_local_json_code">-20004</string>
    <string name="exception_local_json_message">本地转换数据异常！</string>
    <string name="exception_local_other_code">-20005</string>
    <string name="exception_local_other_message">网络异常，请稍后重试！</string>
    <string name="activity_token_error">登录过期，请重新登录</string>
    <string name="years">年</string>
    <string name="moths">月</string>
    <string name="days">日</string>
    <string name="hours">时</string>
    <string name="mins">分</string>
    <string name="min">min</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="minute">分钟前</string>
    <string name="second">秒前</string>
    <string name="tips_app_will_restart">程序出现未知错误，即将重启</string>
    <string name="tips_app_will_exit">程序出现未知错误，即将退出</string>
    <string name="tips_exit_time">再按一次返回键退出程序</string>
    <string name="process_handle_wait">正在加载</string>
    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">释放更新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_up_refresh_pull_label">上拉加载&#8230;</string>
    <string name="pull_up_refresh_release_label">释放加载&#8230;</string>
    <string name="pull_up_refresh_refreshing_label">加载中&#8230;</string>
    <string name="wait">请稍后&#8230;</string>
    <string name="no_more_data">已全部加载</string>
    <string name="no_data">当前暂无数据</string>
    <string name="back">返回</string>
    <string name="enter">确定</string>
    <string name="share">分享</string>
    <string name="share_wait">分享组件正在启动，请您稍候&#8230;</string>
    <string name="share_start">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享已取消</string>
    <string name="share_wechat">微信</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_validation">验证中&#8230;</string>
    <string name="share_of">分享中&#8230;</string>
    <string name="share_wechatmoments">微信朋友圈</string>
    <string name="activity_scan_code">二维码扫描</string>
    <string name="scan_text_tips">对准二维码，即可扫描。</string>
    <string name="scan_addtips_text_tips">扫一扫二维码，加我为好友</string>
    <string name="scan_failed_tips">查找失败</string>
    <string name="activity_image_browse">图片浏览器</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="uncomplete">未完成</string>
    <string name="know">知道了</string>
    <string name="submit">提交</string>
    <string name="prompt">温馨提示</string>
    <string name="hint_select_oper">请选择操作</string>
    <string name="string_setting_net">设置网络</string>
    <string name="string_no_internet">网络未连接，点击重试</string>
    <string name="string_no_data">没有数据</string>
    <string name="string_query_fail">网络异常，点击重试</string>
    <string name="service_update_hint_download_finish">下载完成</string>
    <string name="service_update_hint_download_error">下载失败</string>
    <string name="service_update_hint_download_start">正在下载</string>
    <string name="service_update_hint_download_progress">下载进度：%1$d</string>
    <string name="service_update_hint_download_install">点击安装&#8230;</string>
    <string name="service_update_hint_download_error_check">请检查您的网络状态后重试！</string>
    <string name="login">登录</string>
    <string name="register_account">还没有账号？点我注册</string>
    <string name="register_account1">已有账户？点我登录</string>
    <string name="find_password">找回密码</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="account_hint_fix">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="account_empty_error">账号不能为空</string>
    <string name="account_empty_error1">账号格式不对</string>
    <string name="password_empty_error">密码不能为空</string>
    <string name="login_username">请输入用户手机号</string>
    <string name="login_password">请输入您的密码</string>
    <string name="login_submit">登录</string>
    <string name="login_progressdialog_message">正在努力登录中...</string>
    <string name="login_username_err">用户名不能为空</string>
    <string name="login_password_err">请输入密码</string>
    <string name="activity_main_index">首页</string>
    <string name="activity_main_show">展页</string>
    <string name="activity_main_mine">我的</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="out_register">外勤打卡</string>
    <string name="register_history">历史记录</string>
    <string name="mine_assessment">帮你评估</string>
    <string name="mine_total_application">已申请0单</string>
    <string name="mine_sign_out">退出账户</string>
    <string name="mine_my_order">我的订单</string>
    <string name="mine_binding_phone">绑定手机号</string>
    <string name="mine_updata_passsword">修改密码</string>
    <string name="mine_version">版本更新</string>
    <string name="mine_username">张三丰</string>
    <string name="mine_title">罗湖店.客户经理</string>
    <string name="mine_setting">设置</string>
    <string name="mine_contract">合同入库</string>
    <string name="mine_lock_oil_elect">锁油/断电</string>
    <string name="frame_number_empty">车架号为空</string>
    <string name="frame_number_wrong">车架号输入不正确</string>
    <string name="new_password_num_letter">新密码需要数字和字符结合</string>
    <string name="new_password_length">新密码至少要8个字符</string>
    <string name="new_password_length_second">重复密码至少要8个字符</string>
    <string name="old_password_error">原密码错误，请重新输入</string>
    <string name="updata_password">请输入原密码</string>
    <string name="updata_password_new">请输入新登录密码</string>
    <string name="updata_password_confirm">请再次输入新登录密码</string>
    <string name="updata_password_now">当前登录密码</string>
    <string name="updata_password_secret">新登录密码</string>
    <string name="updata_password_prompt">（新密码，不少于8个字符，需字母与数字结合）</string>
    <string name="developing">功能正在开发中，敬请期待！</string>
    <string name="alertdialog_positive_button">确定</string>
    <string name="alertdialog_negative_button">取消</string>
    <string name="down_message">正在努力更新中...</string>
    <string name="fragment_index_type1">外勤打卡</string>
    <string name="fragment_index_type2">客户管理</string>
    <string name="fragment_index_type3">计算器</string>
    <string name="fragment_index_type4">帮你评估</string>
    <string name="fragment_index_type5">客户经理-录单</string>
    <string name="fragment_index_type6">风控家访</string>
    <string name="fragment_index_type7">GPS监控</string>
    <string name="fragment_index_type8">车辆评估</string>
    <string name="fragment_index_type9">GPS安装</string>
    <string name="fragment_index_type10">车辆抵押</string>
    <string name="fragment_index_type11">车辆解押</string>
    <string name="already_done">已办</string>
    <string name="wait_do">待办</string>
    <string name="car_assessment">车辆评估</string>
    <string name="gps_install">GPS安装</string>
    <string name="car_mortgage">车辆抵押</string>
    <string name="not_sign">未签</string>
    <string name="if_check">是否签收</string>
    <string name="sign_success">签收成功</string>
    <string name="car_num">车牌号</string>
    <string name="orgnization">所属组织</string>
    <string name="register_date">注册时间</string>
    <string name="drive_length">行驶公里数</string>
    <string name="sys_value">系统评估（万）</string>
    <string name="car_vin">车架号</string>
    <string name="input_car_vin">请输入车架号</string>
    <string name="engine_num">发动机号</string>
    <string name="input_engine_num">请输入发动机号</string>
    <string name="start_value">开始评估</string>
    <string name="car_info">车辆信息</string>
    <string name="confirm_car_num">请确认车牌号</string>
    <string name="confirm_register_date">请确认注册时间</string>
    <string name="confirm_drive_length">请确认行驶公里数</string>
    <string name="empty_car_num">车牌号不能为空</string>
    <string name="empty_register_date">注册日期不能为空</string>
    <string name="empty_drive_length">行驶公里数不能为空</string>
    <string name="empty_system_value">系统评估价不能为空</string>
    <string name="empty_car_vin">车架号不能为空</string>
    <string name="empty_engine_num">发动机号不能为空</string>
    <string name="input_corrent_length">请输入正确的行驶公里数</string>
    <string name="input_corrent_car_vin">请输入正确的17位VIN码</string>
    <string name="register_current_date">注册日期不能大于当前日期</string>
    <string name="input_car_brand">请输入车辆品牌</string>
    <string name="is_accident_car">是否事故车</string>
    <string name="input_assess_price">请输入评估价</string>
    <string name="surface_describ">表面情况说明</string>
    <string name="input_surface">请输入车辆表面情况</string>
    <string name="car_pic">车辆图片</string>
    <string name="assess_price">评估价（万）</string>
    <string name="car_brand">车辆品牌</string>
    <string name="submit_success">提交成功</string>
    <string name="car_type_empty">车辆类型不能为空</string>
    <string name="select_accident_car">请选择是否事故车</string>
    <string name="surface_desc_empty">表明情况说明不能为空</string>
    <string name="value_price_empty">评估价不能为空</string>
    <string name="pic_empty">图片不能为空</string>
    <string name="guest_name">客户姓名</string>
    <string name="task_start_time">任务开始时间</string>
    <string name="signee">执行人</string>
    <string name="do_mortgage">去抵押</string>
    <string name="check">查看信息</string>
    <string name="if_take_over">是否过户</string>
    <string name="input_car_num">请输入车牌号</string>
    <string name="collect_material">归档资料</string>
    <string name="empty_take_over">是否已过户不能为空</string>
    <string name="do_release">去解押</string>
    <string name="text_id_card_digits">0123456789ABCDEFGHIGKLMNOPQRSTUVWXYZabcdefghigklmnopqrstuvwxyz</string>
    <string name="next_step">下一步</string>
    <string name="userinfo_xx">*</string>
    <string name="vehicleinfo_license_plate">车牌号</string>
    <string name="vehicleinfo_brand">车辆品牌</string>
    <string name="search">搜索</string>
    <string name="input_scan_imei">请扫描IMEI卡或者输入IMEI信息</string>
    <string name="deivice_type">设备类型</string>
    <string name="device_name">设备名称</string>
    <string name="select_time">时间选择</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
</resources>