<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/view_group_parent"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:minWidth="200dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/distance_20"
        android:layout_marginRight="@dimen/distance_20"
        android:layout_marginTop="@dimen/distance_50">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/et_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="@dimen/distance_15"
            android:background="@drawable/shape_bg_text"
            android:drawableRight="@drawable/date_time"
            android:gravity="center_vertical"
            android:hint="@string/start_time"
            android:minHeight="45dp"
            android:paddingLeft="@dimen/distance_10"
            android:paddingRight="@dimen/distance_10" />

        <TextView
            android:id="@+id/et_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_start_time"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg_text"
            android:drawableRight="@drawable/date_time"
            android:gravity="center_vertical"
            android:hint="@string/end_time"
            android:minHeight="45dp"
            android:paddingLeft="@dimen/distance_10"
            android:paddingRight="@dimen/distance_10" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_end_time"
            android:layout_marginTop="10dp"
            android:background="@color/line_grey_light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:minHeight="35dp"
            android:text="@string/cancel"
            android:textColor="@color/font_black"
            android:textSize="@dimen/font_size_normal" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/zmx_purple"
            android:minHeight="35dp"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_normal" />

    </LinearLayout>

</RelativeLayout>