<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zimi.zimixing.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            style="@style/car_info_tv_style"
            android:text="@string/guest_name" />

        <TextView
            android:id="@+id/tv_guest_name"
            style="@style/car_info_tv_style"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/gps_install_brand_tv"
            style="@style/car_info_tv_style"
            android:text="@string/car_num" />

        <TextView
            android:id="@+id/tv_carnum"
            style="@style/car_info_tv_style"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_brand_title"
            style="@style/car_info_tv_style"
            android:text="@string/car_brand" />

        <TextView
            android:id="@+id/tv_brand"
            style="@style/car_info_tv_style"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_brand_title" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            style="@style/car_info_tv_style"
            android:text="@string/signee" />

        <TextView
            android:id="@+id/tv_conductor"
            style="@style/car_info_tv_style"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/view_line" />

    <LinearLayout
        android:id="@+id/car_info_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:text="@string/do_release"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

</LinearLayout>