<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.zimi.zimixing.login.LoginActivty">


    <ImageView
        android:id="@+id/login_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/login_logo"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="37dp">

        <EditText
            android:id="@+id/activity_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:singleLine="true"
            android:textColorHint="@color/view_line"
            android:drawableLeft="@drawable/phone"
            android:paddingLeft="10dp"
            android:drawablePadding="10dp"
            android:textCursorDrawable="@null"
            android:background="@null"
            android:imeOptions="actionNext"/>

        <View
            android:background="#b6b6b6"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <EditText
            android:id="@+id/activity_login_password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:drawableLeft="@drawable/pass_word"
            android:background="@null"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:hint="@string/login_password"
            android:textColorHint="@color/view_line"
            android:imeOptions="actionGo"/>

        <View
            android:background="#b6b6b6"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <Button
            android:id="@+id/activity_login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_buuton"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/login_submit"/>
    </LinearLayout>

</LinearLayout>
